hummingbird-api/tenant-template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-TENANT_SLUG
  labels:
    hummingbird.io/tenant: "true"
    hummingbird.io/slug: TENANT_SLUG
