hummingbird-api/tenant-template/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hummingbird-frontend-route
  namespace: tenant-TENANT_SLUG
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`TENANT_SLUG.hmmbird.xyz`)
      kind: Rule
      services:
        - name: hummingbird-frontend
          port: 80
